--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
         <div class="dropdown-content">
           <a href="index.html">Overview</a>
           <a href="widgets.html">Widgets</a>
-          <a href="embedding.html">Embedding</a>
+          <a href="embedding.html">THe world</a>
         </div>
       </div>
       <a href="https://github.com/yenchiah/project-website-template">GitHub</a>
